tests/view/snapshots/r#mod__view__map_input_to_commands__should_merge_inputs_of_raw_flag_and_param_body.snap
---
source: tests/view/map_input_to_commands.rs
expression: output.unwrap()
---
- SubmitRequest:
    request:
      url:
        ValidatedUrl:
          protocol: ~
          host: url.com
          port: ~
          paths: []
          query_params: []
          anchor: ~
      method: POST
      headers: {}
      body: "{\"age\":\"40\",\"job\":\"Dev\",\"name\":\"Thales\"}"

