tests/view/snapshots/r#mod__view__map_input_to_commands__should_parse_number_json.snap
---
source: tests/view/map_input_to_commands.rs
expression: output
---
- SubmitRequest:
    request:
      url:
        ValidatedUrl:
          protocol: ~
          host: url.com
          port: ~
          paths: []
          query_params: []
          anchor: ~
      method: GET
      headers: {}
      body:
        Json:
          Hello: World
          age: 29
          amount: -30.8
    view_options:
      print_body_only: false
      suppress_output: false
