tests/view/snapshots/r#mod__view__map_input_to_commands__should_validate_alias_for_localhost_requests.snap
---
source: tests/view/map_input_to_commands.rs
expression: output.unwrap()
---
- SubmitRequest:
    request:
      url:
        ValidatedUrl:
          protocol: ~
          host: localhost
          port: 8080
          paths: []
          query_params:
            - - search
              - Rust
            - - country
              - br
          anchor: ~
      method: GET
      headers: {}
      body:
        Raw: ""
    print_body_only: false
