tests/view/snapshots/r#mod__view__map_input_to_commands__should_validate_alias_for_localhost_requests_with_manual_url.snap
---
source: tests/view/map_input_to_commands.rs
expression: output.unwrap()
---
- SubmitSavedRequest:
    request_name: some-request
    request_data:
      url:
        ValidatedUrl:
          protocol: ~
          host: localhost
          port: 8080
          paths: []
          query_params:
            - - search
              - Rust
          anchor: ~
      method: ~
      headers: ~
      body: ~
    print_body_only: false
